# flare

./: .gitignore  README.md  flare.py  jsconfig.json  notebook.ipynb  package.json  pyproject.toml  webpack.config.js
base/: pyproject.toml
config/: default_ops.toml  flare.toml
flare_client/: data.jsx  drawing-board.js  index.html  index.js  main.jsx  plugins.js  settings.js  styles.module.css
flare_server/: model.py  processor.py  server.py  tools.py
scripts/: config.py  plugins.py  test.py
